--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -79,26 +79,27 @@
     <TypeScriptCompile Include="src\hs\entity\Trigger.ts" />
     <TypeScriptCompile Include="src\hs\entity\Weapon.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsActionFactory.ts" />
-    <TypeScriptCompile Include="src\hs\factories\HsDamageActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsEnchantmentActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsEntityFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\MakeChoiceActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\AddGeneratedCardIntoHand.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\damage\DamageEvents.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\damage\DamageCommons.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\damage\MultistepDamage.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\event\DispatchEvents.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\heal\Heal.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\damage\Damage.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\heal\CalculateAndHeal.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\damage\CalculateAndDealDamage.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\DestroyCardInPlay.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\Discard.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\DrawCard.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\EmptyAction.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\heal\HealEvents.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\helper\Arcane_MissileAction.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\makeChoice\ChooseSingleTarget.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\makeChoice\MakeChoiceAtRandom.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\MarkAsDestroyed.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\MillCard.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\damage\Damage2.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\heal\HealShared.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\damage\HealDamageCalc.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\heal\HealCommons.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\heal\MultistepHeal.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\param\BasicParams.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\AcquireTargets.ts" />
