--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -59,12 +59,12 @@
     <TypeScriptCompile Include="src\hs\def\entity\ISpell.ts" />
     <TypeScriptCompile Include="src\hs\def\entity\IWeapon.ts" />
     <TypeScriptCompile Include="src\hs\def\helpers\DealDirectDamage.ts" />
-    <TypeScriptCompile Include="src\hs\def\Knife_Juggler.ts" />
     <TypeScriptCompile Include="src\hs\def\setBuilder\builders\EntitySetBuilder.ts" />
     <TypeScriptCompile Include="src\hs\def\setBuilder\builders\TriggerSetBuilder.ts" />
     <TypeScriptCompile Include="src\hs\def\setBuilder\DefSetBuilder.ts" />
     <TypeScriptCompile Include="src\hs\def\setBuilder\filters\EntityFilter.ts" />
     <TypeScriptCompile Include="src\hs\def\setBuilder\filters\MinionByAtackFilter.ts" />
+    <TypeScriptCompile Include="src\hs\def\setBuilder\filters\MinionByHpFilter.ts" />
     <TypeScriptCompile Include="src\hs\def\setBuilder\filters\StandardFilters.ts" />
     <TypeScriptCompile Include="src\hs\def\setBuilder\filters\TriggerFilter.ts" />
     <TypeScriptCompile Include="src\hs\def\setBuilder\SetBuilderHelper.ts" />
@@ -83,28 +83,29 @@
     <TypeScriptCompile Include="src\hs\factories\HsEntityFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\MakeChoiceActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\AddGeneratedCardIntoHand.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\damage\DamageEvents.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\damage\DamageCommons.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\damage\MultistepDamage.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\event\DispatchEvents.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\heal\CalculateAndHeal.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\CalculateAndDealDamage.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\damage\DamageCommons.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\damage\DamageEvents.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\damage\MultistepDamage.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\DestroyCardInPlay.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\Discard.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\DrawCard.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\EmptyAction.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\event\DispatchEvent.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\event\DispatchEvents.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\heal\CalculateAndHeal.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\heal\HealCommons.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\heal\HealEvents.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\heal\MultistepHeal.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\helper\Arcane_MissileAction.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\makeChoice\ChooseSingleTarget.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\makeChoice\MakeChoiceAtRandom.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\MarkAsDestroyed.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\MillCard.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\heal\HealCommons.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\heal\MultistepHeal.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\param\BasicParams.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\AcquireTargets.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\event\DispatchEvent.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\EquippingPhase.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\OutermostPhaseEnds.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PayCostAndRemoveFromHand.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayCard.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayMinion.ts" />
@@ -113,7 +114,6 @@
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\AuraUpdateStep.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\Battlecry.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\DeathCreationStep.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\SummonResolutionStep.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PutCardIntoHand.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\ReturnCardIntoHandFromPlayZone.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\Sequence.ts" />
