--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -31,33 +31,32 @@
     <TypeScriptCompile Include="src\commons\StringUtils.ts" />
     <TypeScriptCompile Include="src\core\action\ActionConsts.ts" />
     <TypeScriptCompile Include="src\core\action\ActionStack.ts" />
+    <TypeScriptCompile Include="src\core\action\InlineAction.ts" />
     <TypeScriptCompile Include="src\core\action\IAction.ts" />
-    <TypeScriptCompile Include="src\core\Counter.ts" />
     <TypeScriptCompile Include="src\core\Entity.ts" />
-    <TypeScriptCompile Include="src\core\Marker.ts" />
     <TypeScriptCompile Include="src\core\Zone.ts" />
     <TypeScriptCompile Include="src\core\ZoneExceptions.ts" />
     <TypeScriptCompile Include="src\hsTest\DrawTest.ts" />
     <TypeScriptCompile Include="src\hs\Const.ts" />
-    <TypeScriptCompile Include="src\hs\core\HsAction.ts" />
-    <TypeScriptCompile Include="src\hs\core\HsCounter.ts" />
-    <TypeScriptCompile Include="src\hs\core\HsGameContext.ts" />
-    <TypeScriptCompile Include="src\hs\core\HsMarker.ts" />
+    <TypeScriptCompile Include="src\hs\core\ActionEvent.ts" />
+    <TypeScriptCompile Include="src\hs\core\Action.ts" />
+    <TypeScriptCompile Include="src\hs\core\context\HsContext.ts" />
+    <TypeScriptCompile Include="src\hs\core\context\IContextUtils.ts" />
     <TypeScriptCompile Include="src\hs\core\HsZone.ts" />
     <TypeScriptCompile Include="src\hs\def\action\AllTargetsDefAction.ts" />
     <TypeScriptCompile Include="src\hs\def\action\IDefAction.ts" />
     <TypeScriptCompile Include="src\hs\def\action\SingleTargetDefAction.ts" />
     <TypeScriptCompile Include="src\hs\def\action\TwoStepsTargetsDefAction.ts" />
     <TypeScriptCompile Include="src\hs\def\Const.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\ICard.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\IDefEnchantment.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\IDefTrigger.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\IFlags.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\IHsEntity.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\IMinion.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\IPlayer.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\ISpell.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\IWeapon.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\ICard.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\IDefEnchantment.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\IDefTrigger.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\IFlags.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\IHsEntity.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\IMinion.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\IPlayer.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\ISpell.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\IWeapon.ts" />
     <TypeScriptCompile Include="src\hs\def\helpers\DealDirectDamage.ts" />
     <TypeScriptCompile Include="src\hs\def\setBuilder\builders\EntitySetBuilder.ts" />
     <TypeScriptCompile Include="src\hs\def\setBuilder\builders\TriggerSetBuilder.ts" />
@@ -78,6 +77,7 @@
     <TypeScriptCompile Include="src\hs\entity\PermanentState\PermanentStateHelper.ts" />
     <TypeScriptCompile Include="src\hs\entity\Player.ts" />
     <TypeScriptCompile Include="src\hs\entity\Spell.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\Tag.ts" />
     <TypeScriptCompile Include="src\hs\entity\Trigger.ts" />
     <TypeScriptCompile Include="src\hs\entity\Weapon.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsActionFactory.ts" />
