--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -31,32 +31,32 @@
     <TypeScriptCompile Include="src\commons\StringUtils.ts" />
     <TypeScriptCompile Include="src\core\action\ActionConsts.ts" />
     <TypeScriptCompile Include="src\core\action\ActionStack.ts" />
-    <TypeScriptCompile Include="src\core\action\InlineAction.ts" />
     <TypeScriptCompile Include="src\core\action\IAction.ts" />
+    <TypeScriptCompile Include="src\core\action\InlineAction.ts" />
     <TypeScriptCompile Include="src\core\Entity.ts" />
     <TypeScriptCompile Include="src\core\Zone.ts" />
     <TypeScriptCompile Include="src\core\ZoneExceptions.ts" />
     <TypeScriptCompile Include="src\hsTest\DrawTest.ts" />
     <TypeScriptCompile Include="src\hs\Const.ts" />
-    <TypeScriptCompile Include="src\hs\core\ActionEvent.ts" />
     <TypeScriptCompile Include="src\hs\core\Action.ts" />
+    <TypeScriptCompile Include="src\hs\core\ActionEvent.ts" />
     <TypeScriptCompile Include="src\hs\core\context\HsContext.ts" />
     <TypeScriptCompile Include="src\hs\core\context\IContextUtils.ts" />
     <TypeScriptCompile Include="src\hs\core\HsZone.ts" />
+    <TypeScriptCompile Include="src\hs\def\actionNew\DefBuffAction.ts" />
+    <TypeScriptCompile Include="src\hs\def\actionNew\IDefAction.ts" />
+    <TypeScriptCompile Include="src\hs\def\actionNew\TargetPicker.ts" />
     <TypeScriptCompile Include="src\hs\def\action\AllTargetsDefAction.ts" />
-    <TypeScriptCompile Include="src\hs\def\action\IDefAction.ts" />
     <TypeScriptCompile Include="src\hs\def\action\SingleTargetDefAction.ts" />
     <TypeScriptCompile Include="src\hs\def\action\TwoStepsTargetsDefAction.ts" />
+    <TypeScriptCompile Include="src\hs\def\Aliases.ts" />
+    <TypeScriptCompile Include="src\hs\def\cards\Mage.ts" />
+    <TypeScriptCompile Include="src\hs\def\cards\Neutrals.ts" />
     <TypeScriptCompile Include="src\hs\def\Const.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\ICard.ts" />
     <TypeScriptCompile Include="src\hs\def\elements\IDefEnchantment.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\IDefEntities.ts" />
     <TypeScriptCompile Include="src\hs\def\elements\IDefTrigger.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\IFlags.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\IHsEntity.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\IMinion.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\IPlayer.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\ISpell.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\IWeapon.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\Tag.ts" />
     <TypeScriptCompile Include="src\hs\def\helpers\DealDirectDamage.ts" />
     <TypeScriptCompile Include="src\hs\def\setBuilder\builders\EntitySetBuilder.ts" />
     <TypeScriptCompile Include="src\hs\def\setBuilder\builders\TriggerSetBuilder.ts" />
@@ -77,7 +77,6 @@
     <TypeScriptCompile Include="src\hs\entity\PermanentState\PermanentStateHelper.ts" />
     <TypeScriptCompile Include="src\hs\entity\Player.ts" />
     <TypeScriptCompile Include="src\hs\entity\Spell.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\Tag.ts" />
     <TypeScriptCompile Include="src\hs\entity\Trigger.ts" />
     <TypeScriptCompile Include="src\hs\entity\Weapon.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsActionFactory.ts" />
@@ -106,13 +105,12 @@
     <TypeScriptCompile Include="src\hs\hsActions\MillCard.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\param\BasicParams.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\AcquireTargets.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\EquippingPhase.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\OutermostPhaseEnd.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PayCostAndRemoveFromHand.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayCard.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayMinionSequence.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlaySpell.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayWeapon.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayWeaponSequence.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\AuraUpdateStep.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\Battlecry.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\DeathCreationStep.ts" />
@@ -122,9 +120,6 @@
     <TypeScriptCompile Include="src\hs\hsActions\ShuffleDeck.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\ShuffleGeneratedCardIntoDeck.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\SilenceAMinion.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\technical\ExecuteTargetedTrigger.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\technical\ExecuteTargetlessTrigger.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\technical\ExecuteTriggers.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\Fatigue.ts" />
   </ItemGroup>
   <PropertyGroup>
