--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -50,6 +50,7 @@
     <TypeScriptCompile Include="src\hs\def\action\SingleTargetDefAction.ts" />
     <TypeScriptCompile Include="src\hs\def\action\TwoStepsTargetsDefAction.ts" />
     <TypeScriptCompile Include="src\hs\def\Aliases.ts" />
+    <TypeScriptCompile Include="src\hs\def\cards\Warlock.ts" />
     <TypeScriptCompile Include="src\hs\def\cards\Mage.ts" />
     <TypeScriptCompile Include="src\hs\def\cards\Neutrals.ts" />
     <TypeScriptCompile Include="src\hs\def\Const.ts" />
@@ -57,16 +58,15 @@
     <TypeScriptCompile Include="src\hs\def\elements\IDefEntities.ts" />
     <TypeScriptCompile Include="src\hs\def\elements\IDefTrigger.ts" />
     <TypeScriptCompile Include="src\hs\def\elements\Tag.ts" />
-    <TypeScriptCompile Include="src\hs\def\helpers\DealDirectDamage.ts" />
-    <TypeScriptCompile Include="src\hs\def\setBuilder\builders\EntitySetBuilder.ts" />
-    <TypeScriptCompile Include="src\hs\def\setBuilder\builders\TriggerSetBuilder.ts" />
-    <TypeScriptCompile Include="src\hs\def\setBuilder\DefSetBuilder.ts" />
-    <TypeScriptCompile Include="src\hs\def\setBuilder\filters\EntityFilter.ts" />
-    <TypeScriptCompile Include="src\hs\def\setBuilder\filters\MinionByAtackFilter.ts" />
-    <TypeScriptCompile Include="src\hs\def\setBuilder\filters\MinionByHpFilter.ts" />
-    <TypeScriptCompile Include="src\hs\def\setBuilder\filters\StandardFilters.ts" />
-    <TypeScriptCompile Include="src\hs\def\setBuilder\filters\TriggerFilter.ts" />
-    <TypeScriptCompile Include="src\hs\def\setBuilder\SetBuilderHelper.ts" />
+    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\builders\EntitySetBuilder.ts" />
+    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\builders\TriggerSetBuilder.ts" />
+    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\ITargetSetBuilder.ts" />
+    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\filters\EntityFilter.ts" />
+    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\filters\MinionByAtackFilter.ts" />
+    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\filters\MinionByHpFilter.ts" />
+    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\filters\StandardFilters.ts" />
+    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\filters\TriggerFilter.ts" />
+    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\TargetFinder.ts" />
     <TypeScriptCompile Include="src\hs\entity\Card.ts" />
     <TypeScriptCompile Include="src\hs\entity\CardSet.ts" />
     <TypeScriptCompile Include="src\hs\entity\HsEntity.ts" />
