--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -21,15 +21,13 @@
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="src\hs\hsActions\new\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <TypeScriptCompile Include="src\commons\ClassUtils.ts" />
     <TypeScriptCompile Include="src\commons\Collection.ts" />
     <TypeScriptCompile Include="src\commons\MathUtils.ts" />
     <TypeScriptCompile Include="src\commons\StringUtils.ts" />
-    <TypeScriptCompile Include="src\core\action\ActionConsts.ts" />
+    <TypeScriptCompile Include="src\core\action\ActionCommons.ts" />
     <TypeScriptCompile Include="src\core\action\ActionStack.ts" />
     <TypeScriptCompile Include="src\core\action\IAction.ts" />
     <TypeScriptCompile Include="src\core\action\InlineAction.ts" />
@@ -43,84 +41,87 @@
     <TypeScriptCompile Include="src\hs\core\context\HsContext.ts" />
     <TypeScriptCompile Include="src\hs\core\context\IContextUtils.ts" />
     <TypeScriptCompile Include="src\hs\core\HsZone.ts" />
-    <TypeScriptCompile Include="src\hs\def\actionNew\DefBuffAction.ts" />
-    <TypeScriptCompile Include="src\hs\def\actionNew\IDefAction.ts" />
-    <TypeScriptCompile Include="src\hs\def\actionNew\TargetPicker.ts" />
-    <TypeScriptCompile Include="src\hs\def\action\AllTargetsDefAction.ts" />
-    <TypeScriptCompile Include="src\hs\def\action\SingleTargetDefAction.ts" />
-    <TypeScriptCompile Include="src\hs\def\action\TwoStepsTargetsDefAction.ts" />
     <TypeScriptCompile Include="src\hs\def\Aliases.ts" />
-    <TypeScriptCompile Include="src\hs\def\cards\Warlock.ts" />
     <TypeScriptCompile Include="src\hs\def\cards\Mage.ts" />
     <TypeScriptCompile Include="src\hs\def\cards\Neutrals.ts" />
+    <TypeScriptCompile Include="src\hs\def\cards\Warlock.ts" />
     <TypeScriptCompile Include="src\hs\def\Const.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\IDefEnchantment.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\IDefAction.ts" />
     <TypeScriptCompile Include="src\hs\def\elements\IDefEntities.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\IDefTargetDefinition.ts" />
     <TypeScriptCompile Include="src\hs\def\elements\IDefTrigger.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\Tag.ts" />
-    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\builders\EntitySetBuilder.ts" />
-    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\builders\TriggerSetBuilder.ts" />
-    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\ITargetSetBuilder.ts" />
-    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\filters\EntityFilter.ts" />
-    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\filters\MinionByAtackFilter.ts" />
-    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\filters\MinionByHpFilter.ts" />
-    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\filters\StandardFilters.ts" />
-    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\filters\TriggerFilter.ts" />
-    <TypeScriptCompile Include="src\hs\def\targetSetBuilder\TargetFinder.ts" />
-    <TypeScriptCompile Include="src\hs\entity\Card.ts" />
-    <TypeScriptCompile Include="src\hs\entity\CardSet.ts" />
-    <TypeScriptCompile Include="src\hs\entity\HsEntity.ts" />
-    <TypeScriptCompile Include="src\hs\entity\Minion.ts" />
-    <TypeScriptCompile Include="src\hs\entity\PermanentState\IPerrmanent.ts" />
-    <TypeScriptCompile Include="src\hs\entity\PermanentState\PermanentState.ts" />
-    <TypeScriptCompile Include="src\hs\entity\PermanentState\PermanentStateCalculator.ts" />
-    <TypeScriptCompile Include="src\hs\entity\PermanentState\PermanentStateHelper.ts" />
-    <TypeScriptCompile Include="src\hs\entity\Player.ts" />
-    <TypeScriptCompile Include="src\hs\entity\Spell.ts" />
-    <TypeScriptCompile Include="src\hs\entity\Trigger.ts" />
-    <TypeScriptCompile Include="src\hs\entity\Weapon.ts" />
+    <TypeScriptCompile Include="src\hs\def\elements\Tags.ts" />
+    <TypeScriptCompile Include="src\hs\def\helper\defAction\DefBuffAction.ts" />
+    <TypeScriptCompile Include="src\hs\def\helper\defTargetDefinition\SimpleTargetDefinition.ts" />
+    <TypeScriptCompile Include="src\hs\def\helper\defTargetDefinition\_OPTIONAL_TARGET.ts" />
+    <TypeScriptCompile Include="src\hs\def\helper\defTargetDefinition\_TARGET.ts" />
+    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\builders\EntitySetBuilder.ts" />
+    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\builders\TriggerSetBuilder.ts" />
+    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\filters\EntityFilter.ts" />
+    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\filters\MinionByAtackFilter.ts" />
+    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\filters\MinionByHpFilter.ts" />
+    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\filters\StandardFilters.ts" />
+    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\filters\TriggerFilter.ts" />
+    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\ITargetSetBuilder.ts" />
+    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\TargetFinder.ts" />
+    <TypeScriptCompile Include="src\hs\def\outdated\action\AllTargetsDefAction.ts" />
+    <TypeScriptCompile Include="src\hs\def\outdated\action\SingleTargetDefAction.ts" />
+    <TypeScriptCompile Include="src\hs\def\outdated\action\TwoStepsTargetsDefAction.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsEnchantmentActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsEntityFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\MakeChoiceActionFactory.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\AddGeneratedCardIntoHand.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\coreActions\DrawCard.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlayCardSequence.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\CalculateAndDealDamage.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\damage\CalculateAndSplitDamage.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\DamageCommons.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\DamageEvents.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\MultistepDamage.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\DestroyCardInPlay.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\Discard.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\DrawCard.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\EmptyAction.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\event\DispatchEvent.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\event\DispatchEvents.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\heal\CalculateAndHeal.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\heal\CalculateAndSplitHeal.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\heal\HealCommons.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\heal\HealEvents.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\heal\MultistepHeal.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\helper\Arcane_MissileAction.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\makeChoice\ChooseSingleTarget.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\makeChoice\MakeChoiceAtRandom.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\MarkAsDestroyed.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\MillCard.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\param\BasicParams.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\AcquireTargets.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\outdated\AddGeneratedCardIntoHand.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\outdated\DestroyCardInPlay.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\outdated\Discard.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\outdated\makeChoice\ChooseSingleTarget.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\outdated\makeChoice\MakeChoiceAtRandom.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\outdated\MillCard.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\outdated\param\BasicParams.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\outdated\PutCardIntoHand.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\outdated\ReturnCardIntoHandFromPlayZone.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\outdated\Sequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\outdated\SilenceAMinion.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\OutermostPhaseEnd.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PayCostAndRemoveFromHand.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayCard.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayMinionSequence.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlaySpell.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlaySpellSequence.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayWeaponSequence.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\AuraUpdateStep.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\Battlecry.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\DeathCreationStep.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PutCardIntoHand.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\ReturnCardIntoHandFromPlayZone.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\Sequence.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\ShuffleDeck.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\ShuffleGeneratedCardIntoDeck.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\SilenceAMinion.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\Fatigue.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\ShuffleDeck.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\ShuffleGeneratedCardIntoDeck.ts" />
+    <TypeScriptCompile Include="src\hs\model\Card.ts" />
+    <TypeScriptCompile Include="src\hs\model\CardSet.ts" />
+    <TypeScriptCompile Include="src\hs\model\Enchantment.ts" />
+    <TypeScriptCompile Include="src\hs\model\HsEntity.ts" />
+    <TypeScriptCompile Include="src\hs\model\Minion.ts" />
+    <TypeScriptCompile Include="src\hs\model\PermanentState\IPerrmanent.ts" />
+    <TypeScriptCompile Include="src\hs\model\PermanentState\PermanentState.ts" />
+    <TypeScriptCompile Include="src\hs\model\PermanentState\PermanentStateCalculator.ts" />
+    <TypeScriptCompile Include="src\hs\model\PermanentState\PermanentStateHelper.ts" />
+    <TypeScriptCompile Include="src\hs\model\Player.ts" />
+    <TypeScriptCompile Include="src\hs\model\Spell.ts" />
+    <TypeScriptCompile Include="src\hs\model\Tag.ts" />
+    <TypeScriptCompile Include="src\hs\model\Trigger.ts" />
+    <TypeScriptCompile Include="src\hs\model\Weapon.ts" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
